Reports/Test endpoint (#29)
